--- a/03-CSS-Fundamentals/styles.css
+++ b/03-CSS-Fundamentals/styles.css
@@ -1,11 +1,42 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+* {
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+}
+
+body {
   font-family: sans-serif;
   color: #444;
+
+  border-top: 10px solid lightblue;
+}
+
+.container {
+  width: 800px;
+  margin: 0 auto;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -24,11 +55,14 @@ h1 {
 h2 {
   /* font-family: sans-serif; */
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
   /* font-family: sans-serif; */
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -42,6 +76,7 @@ p {
   font-size: 22px;
   /* font-family: sans-serif; */
   line-height: 1.5;
+  margin-bottom: 15px;
 }
 
 /* footer p {
@@ -59,9 +94,19 @@ p {
   font-size: 18px;
 }
 
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
 li {
   font-size: 20px;
+  margin-bottom: 10px;
   /* font-family: sans-serif; */
+}
+li:last-child {
+  margin-bottom: 0;
 }
 
 .related-author {
@@ -71,16 +116,6 @@ li {
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
 }
 
 /* li:first-child {
@@ -113,4 +148,15 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+.post-img {
+  width: 100%;
+  height: auto;
+}
+
+nav a:link {
+  margin-right: 30px;
+  margin-top: 10px;
+
+  display: inline-block;
 }
