--- a/03-CSS-Fundamentals/styles.css
+++ b/03-CSS-Fundamentals/styles.css
@@ -9,11 +9,13 @@ body {
   color: #444;
 
   border-top: 10px solid lightblue;
+  position: relative;
 }
 
 .container {
   width: 800px;
   margin: 0 auto;
+  position: relative;
 }
 
 article {
@@ -56,6 +58,7 @@ h2 {
   /* font-family: sans-serif; */
   font-size: 40px;
   margin-bottom: 30px;
+  position: relative;
 }
 
 h3 {
@@ -159,4 +162,41 @@ nav a:link {
   margin-top: 10px;
 
   display: inline-block;
+}
+
+nav {
+  text-align: center;
+}
+
+.like {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* tylko paragrafy po h3 otrzymaja red */
+h3 + p::first-line {
+  color: red;
+}
+/* pozycja "za" elementem h2 - last child */
+h2::after {
+  content: "TOP";
+  position: absolute;
+  right: -25px;
+  top: -10px;
+  background-color: #ffe70e;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  font-size: 16px;
+  color: black;
 }
