--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -199,7 +199,7 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   display: inline-block;
 }
 
@@ -269,12 +269,13 @@ nav p {
 } */
 
 /* FLOATS */
+/* 
 .author-img {
   float: left;
   margin-bottom: 20px;
 }
 .author {
-  /* padding-left: 80px; */
+  padding-left: 80px;
   float: left;
   margin-top: 10px;
   margin-left: 20px;
@@ -287,9 +288,9 @@ h1 {
 nav {
   float: right;
 }
-/* .clear {
+.clear {
   clear: both;
-} */
+}
 .clearfix::after {
   clear: both;
   content: "";
@@ -306,4 +307,59 @@ aside {
 }
 footer {
   clear: both;
+} 
+
+*/
+
+/* FLEXBOX */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.author-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+}
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  flex: 0 0 300px;
 }
