--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -7,9 +7,14 @@
 
 - Font weights:
 Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
 
 - Line heights:
 Default: 1
+Small: 1.05
+Paragraph default: 1.6
 
 
 --- 02 COLORS
@@ -28,6 +33,8 @@ Default: 1
 
 
 --- 04 BORDER-RADIUS
+
+Default: 10px
 
 
 --- 05 WHITESPACE
@@ -55,23 +62,33 @@ body {
   font-weight: 400;
   color: #555;
 }
-.hero {
-  max-width: 130rem;
+
+/* **************** */
+/* General ReUsable Components */
+/* **************** */
+
+.container {
+  /* 1140px */
+  min-width: 120rem;
+  padding: 0 3.2rem;
   margin: 0 auto;
+}
+
+.grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
   gap: 9.6rem;
 }
-.hero-img {
-  width: 100%;
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
-.hero-text-box {
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
 }
+
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -79,11 +96,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
 }
 .btn:link,
 .btn:visited {
@@ -123,11 +135,94 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-.hero-img-box {
-}
-
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/* **************** */
+/* Header */
+/* **************** */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+
+/* **************** */
+/* Navigation */
+/* **************** */
+
+.main-nav-list {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+
+/* **************** */
+/* Hero Section */
+/* **************** */
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+.hero-img {
+  width: 100%;
+}
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+.hero-text-box {
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img-box {
 }
 
 .delivered-meals {
@@ -160,4 +255,18 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/* **************** */
+/* How it works Section */
+/* **************** */
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
+}
+
+.section-how div {
+  padding: 10rem;
+  font-size: 5rem;
 }
