--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -41,6 +41,7 @@ Paragraph default: 1.6
 --- 04 BORDER-RADIUS
 
 Default: 10px
+Medium: 12px
 
 
 --- 05 WHITESPACE
@@ -141,7 +142,7 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 10px;
   text-decoration: none;
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -168,7 +169,32 @@ body {
   /* Trick to add border inside btn */
   box-shadow: inset 0 0 0 3px #fff;
 }
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+.link:hover,
+link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER CLASSES */
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.center-text {
+  text-align: center;
+}
+strong {
+  font-weight: 500;
 }
