--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -28,7 +28,7 @@ Paragraph default: 1.6
 - Tints:
 #fdf2e9
 #fae5d3
-- Shades: #cf711f
+- Shades: #cf711f, #eb984e
 - Accents:
 - Greys:
 #6f6f6f; (lightest gray allowed on #fdf2e9)
@@ -38,7 +38,7 @@ Paragraph default: 1.6
 
 --- 03 SHADOWS
 
-
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 --- 04 BORDER-RADIUS
 
 Default: 10px
@@ -56,6 +56,13 @@ Medium: 12px
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 html {
@@ -137,6 +144,7 @@ body {
   letter-spacing: 0.75px;
   margin-bottom: 1.6rem;
 }
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -146,6 +154,9 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
   text-decoration: none;
   transition: all 0.3s;
 }
@@ -174,6 +185,19 @@ body {
   /* Trick to add border inside btn */
   box-shadow: inset 0 0 0 3px #fff;
 }
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+  cursor: pointer;
+}
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
 .link:link,
 .link:visited {
   display: inline-block;
@@ -206,6 +230,7 @@ link:active {
   height: 3rem;
   color: #e67e22;
 }
+
 /* HELPER CLASSES */
 
 .margin-right-sm {
