omnifood desctop finished

--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -31,7 +31,9 @@ Paragraph default: 1.6
 - Shades: #cf711f, #eb984e
 - Accents:
 - Greys:
-#6f6f6f; (lightest gray allowed on #fdf2e9)
+#888
+#6f6f6f (lightest gray allowed on white)
+#6f6f6f (lightest gray allowed on #fdf2e9)
 #555
 #333
 
@@ -110,6 +112,9 @@ body {
 }
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .heading-primary,
